RESOLVED FIXED146238
Misleading error message: "At least one digit must occur after a decimal point"
https://bugs.webkit.org/show_bug.cgi?id=146238
Summary Misleading error message: "At least one digit must occur after a decimal point"
Claude Pache
Reported 2015-06-23 08:37:46 PDT
Type in the console: 12.34a You get rightfully an SyntaxError, but the message is incorrect: SyntaxError: At least one digit must occur after a decimal point
Attachments
Patch (4.56 KB, patch)
2015-07-28 12:47 PDT, Basile Clement
ggaren: review+
Basile Clement
Comment 1 2015-07-28 12:47:00 PDT
Geoffrey Garen
Comment 2 2015-07-28 13:18:49 PDT
Comment on attachment 257671 [details] Patch r=me
Basile Clement
Comment 3 2015-07-28 13:22:05 PDT
Note You need to log in before you can comment on or make changes to this bug.