Misleading error message: "At least one digit must occur after a decimal point" https://bugs.webkit.org/show_bug.cgi?id=146238

Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

Interestingly, we had a comment explaining what this error message was
about that is much clearer than the error message itself. This patch
simply replaces the error message with the explanation from the
comment.

* parser/Lexer.cpp:
(JSC::Lexer<T>::lex):

LayoutTests:

The expected error message in this test has changed.

* js/basic-strict-mode-expected.txt:

Canonical link: https://commits.webkit.org/165461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187506 268f45cc-cd09-0410-ab3c-d52691b4dbfc